--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "start": "node crawlee.js"
   },
   "dependencies": {
+    "@crawlee/memory-storage": "^3.15.0",
+    "@hono/node-server": "^1.19.3",
     "crawlee": "^3.15.0",
     "fingerprint-generator": "^2.1.72",
     "fingerprint-injector": "^2.1.72",
+    "hono": "^4.9.8",
     "puppeteer": "^24.22.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
